--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -29,4 +29,8 @@ dependencies {
     implementation 'org.apache.commons:commons-math3:3.6.1'
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.7'
     implementation 'com.acmerobotics.roadrunner:core:0.5.6'
+    implementation "org.tensorflow:tensorflow-lite:2.9.0"
+    implementation "org.tensorflow:tensorflow-lite-task-vision:0.3.1"
+    implementation "org.tensorflow:tensorflow-lite-gpu:2.9.0"
+
 }
